--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
   # - pip install pytest-cov
   - pip install coveralls
   - pip install versioneer
+  - pip install pysis
   - pip install pytest-ipynb
   - pip install --pre .
 
