--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [wheel]
 universal = 1
 
-[versioneer]
-VCS = git
-style = pep440
-versionfile_source = pyciss/_version.py
-tag_prefix = v
+[bumpversion]
+current_version = 0.2.0
+commit = True
+tag = True
+
+[bumpversion:file:setup.py]
