--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   # - pip install pytest-cov
   - pip install coveralls
   - pip install versioneer
-  - pip install -e git@github.com:wtolson/pysis.git@v6.0
+  - pip install -e git+ssh://github.com:wtolson/pysis.git@v6.0
   - pip install pytest-ipynb
   - pip install --pre .
 
