--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,11 @@
 [bumpversion]
-current_version = 0.4.0
+current_version = 0.4.1
 commit = True
 tag = True
 
 [bumpversion:file:setup.py]
-[bumpversion:file:pyciss/_version.py]]
+
+[bumpversion:file:pyciss/_version.py]
 
 [wheel]
 universal = 0
