make options in config file lower case

--- a/pyciss/config.ini
+++ b/pyciss/config.ini
@@ -1,8 +1,8 @@
 [DEFAULT]
 database_path =
 
-[MacL2938]
+[macl2938]
 database_path = /Volumes/USB128GB/ciss
 
-[MacD2860]
+[macd2860]
 database_path = /Volumes/Data/ciss
