--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ install:
   # - pip install codecov
   # - pip install pytest-cov
   - pip install coveralls
-  - pip install versioneer
-  - pip install https://github.com/wtolson/pysis/archive/0.6.0.zip
+  - pip install pysis
   - pip install pytest-ipynb
   - pip install --pre .
 
