moved version string to __init__,adapt setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,11 +5,10 @@ tag = True
 
 [bumpversion:file:setup.py]
 
-[bumpversion:file:pyciss/_version.py]
+[bumpversion:file:pyciss/__init__.py]
 
 [wheel]
 universal = 0
 
 [aliases]
 test = pytest
-
