--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ branches:
   except:
     - gh-pages
 
-python:
-  - "3.5"
-
+# python:
+#   - "3.6"
+#
 install:
   - sudo apt-get update
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
@@ -19,7 +19,7 @@ install:
   - conda update -q conda
   - conda info -a
   # now my stuff
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION --file conda_requirements.txt
+  - conda create -q -n test-environment python=3 --file conda_requirements.txt
   - source activate test-environment
   - conda install pytest
   - pip install coveralls
