--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
+dist: xenial
 language: python
+python:
+  - "3.7"
 
 cache: pip
 
@@ -6,9 +9,6 @@ branches:
   except:
     - gh-pages
 
-# python:
-#   - "3.6"
-#
 install:
   - sudo apt-get update
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
